# course-cxx-TextEditor

./: .gitignore  CMakeLists.txt  client.py  main.cpp  readme.md
client/: client.py
client/context/: army_creation.py  context.py  interpreter.py  lobby.py  menu.py  protocol.py
explore/: try_binary_archive.cpp
game/: CMakeLists.txt  GameClock.hpp  GameFacade.cpp  GameFacade.hpp  Player.hpp  SetupComponents.cpp  SetupComponents.hpp  TacticalGame.hpp  TacticalGameState.cpp  TacticalGameState.hpp
game/auxiliary/: serialization.hpp
game/include/: simdjson.cpp
game/queue/: ThreadQueue.h
game/request/: TacticalGameRequest.cpp
game/resource/factions/france/units/: infantry.json
game/resource/factions/prussia/units/: infantry.json
game/src/: Context.cpp  Context.hpp  Game.cpp  Game.hpp  GameClient.cpp  GameClient.hpp  GameFacade.hpp  GameServer.cpp  GameServer.hpp  Player.cpp  Player.hpp  TacticalGame.hpp  TacticalGameState.hpp
game/src/clock/: GameClock.cpp  GameClock.hpp
game/src/context/: GameContext.cpp  GameContext.hpp
game/src/context/state/: State.cpp  State.hpp  StateMemento.cpp  StateMemento.hpp
game/src/map/: GameMap.cpp  GameMap.hpp  Graph.cpp  Graph.hpp  Path.cpp  Path.hpp  PhysicalMap.cpp  PhysicalMap.hpp
game/src/repository/: GameLoader.cpp  GameLoader.hpp  Repository.hpp
game/src/repository/faction/: Faction.cpp  Faction.hpp
game/src/repository/faction/unit/: TacticalUnit.cpp  TacticalUnit.hpp  UnitData.hpp  UnitStatsFactory.cpp  UnitStatsFactory.hpp
game/src/request/: TacticalGameRequest.hpp
game/src/server/: BattleBuilder.cpp  BattleBuilder.hpp  Context.cpp  Context.hpp  EntityComponentSystem.cpp  EntityComponentSystem.hpp  GameServer.cpp  GameServer.hpp  Header.cpp  Header.hpp  LobbyConfig.cpp  LobbyConfig.hpp  Response.cpp  Response.hpp  Unit.cpp  Unit.hpp
game/test/: TestGameServer.cpp  TestGameServer.hpp
game/test/repository/: TestGameLoader.cpp  TestGameLoader.hpp
